--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -7,8 +7,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+prometheus-client = "0.17.1"
 
 
 [build-system]
-requires = ["poetry-core", "prometheus_client ~= 0.17.1"]
+requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
